corrected and added text

--- a/pages/fashion.html
+++ b/pages/fashion.html
@@ -49,16 +49,16 @@
           </button>
         </div>
         <div class="text-center nav-text text-xl">
-          <a href="index.html">
+          <a href="../index.html">
             <div id="homeNav" class=" hover:text-violet-400" style="margin: 40px 0;">Home</div>
           </a>
-          <a href="./pages/about.html">
+          <a href="./about.html">
             <div id="aboutNav" class=" hover:text-violet-400" style="margin: 40px 0;">About</div>
           </a>
-          <a href="./pages/fashion.html">
+          <a href="./fashion.html">
             <div id="fashionNav" class=" hover:text-violet-400" style="margin: 40px 0;">Fashion</div>
           </a>
-          <a href="./pages/reason.html">
+          <a href="./reason.html">
             <div itemref="reasonNav" class=" hover:text-violet-400" style="margin: 40px 0;">Reason</div>
           </a>
         </div>
@@ -153,11 +153,11 @@
     </div>
 
     <div class="bg-purple-800 m-4 rounded-lg">
-      <p class="fashion-text text-xl text-white p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non beatae
-        distinctio ullam placeat ex nihil numquam consequuntur harum, aliquam molestiae hic est laborum odit quo
-        laboriosam exercitationem consectetur accusantium et. <br>Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Sapiente, voluptates dolores quidem consequatur quae et voluptatem saepe necessitatibus illo voluptas
-        impedit, itaque, id provident libero voluptatum praesentium consectetur quas quibusdam!</p>
+      <p class="fashion-text text-white p-4">Alex Russo's style was very trendy at the time. 
+        Typically, when you look back at 2000s and 2010s fashion, you'd question the fashion sense back then. However, even with the tons of layering
+        Alex wore, it somehow seems so put together. Typically, she tends to dress down, but even her casual clothes seem very well put together. Everything from her pajamas to dresses to shoes to accessories seemed very chic on her. Throughout the seasons,
+        he style varied but she looked great nonetheless. She often wore sweaters/ long sleeves with elaborate shirts. For a bit, she seemed obsessed with scarves. Adding multi-colored accessories with it added a feminine and sophisticated flair to her wardrobe.
+        <br><br>  Other than clothes, I feel like Alex's hair was always perfect. It felt like her hair was a statement piece. She most often had perfect wavy curls. Later into the show, she even got highlights! </p>
     </div>
   </div>
 
@@ -209,15 +209,11 @@
               N</div>
           </div>
           <div class="mx-10 ps-5 pe-10 py-5 bg-violet-950 rounded-lg">
-            <p class="fashion-text text-2xl pb-24 text-white" style="padding-right: 160px; padding-bottom: 35px;">Lorem
-              ipsum dolor sit amet consectetur adipisicing elit. Quas impedit optio et non modi quod consequuntur,
-              obcaecati aut est eligendi debitis aperiam quisquam earum fugiat laboriosam eos ducimus illo quos! Lorem
-              ipsum dolor sit amet consectetur adipisicing elit.
-              <br>Excepturi quibusdam minus similique sit ullam doloremque omnis nemo, quas impedit? Consequatur,
-              repellendus. Consequuntur eveniet quo facere quod? Aperiam laudantium molestiae id. Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Odit consectetur dolore veritatis ducimus maiores quo, blanditiis eius
-              fugiat voluptatibus pariatur quidem consequatur! Quisquam, fugiat ullam sit repudiandae aspernatur esse
-              nulla!
+            <p class="fashion-text text-3xl text-center p-2"> <span class="text-blue-300">BOHEMIAN </span><span class="text-pink-500"> CASUAL</span> <span class="text-teal-300">CHIC</span> <span class="text-amber-400">ICONIC</span></p>
+            <p class="fashion-text text-2xl pb-24 text-white" style="padding-right: 160px; padding-bottom: 35px;">Alex Russo's style was very trendy at the time. 
+              Typically, when you look back at 2000s and 2010s fashion, you'd question the fashion sense back then. However, even with the tons of layering
+              Alex wore, it somehow seems so put together. Typically, she tends to dress down, but even her casual clothes seem very well put together. Everything from her pajamas to dresses to shoes to accessories seemed very chic on her. She also often wore sweaters/ long sleeves with elaborate shirts. She also adds multi-colored accessories and scarves for a feminine and sophisticated flair to her wardrobe.
+              <br> Other than clothes, I feel like Alex's hair was always perfect. It felt like her hair was a statement piece. She most often had perfect wavy curls. Later into the show, she even got highlights! 
             </p>
           </div>
           <div class="absolute" style="right: -2%; bottom: 1%; border: 10px solid lightskyblue;">
@@ -230,25 +226,12 @@
               src="../assets/71973ab15d799380dd1ea68c25c00ecd.png" alt="">
 
           </div>
-          <!-- <div class="flex justify-center mx-10 mt-14 mb-6" style="border: 10px solid lightseagreen;">
-        </div> -->
+
         </div>
       </div>
 
-      <!-- <div class="grid grid-cols-[200px_auto]"></div> ">
-      <div class="">
-        <img src="../assets/Screenshot 2024-01-22 143556-PhotoRoom 1.png" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat non dignissimos facere sapiente veniam? Cupiditate distinctio fugit officiis velit quas, accusamus autem, pariatur assumenda molestias cumque quia modi culpa excepturi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam totam perferendis architecto ipsam consequuntur culpa earum. Odio, necessitatibus quasi saepe suscipit perferendis, dignissimos, fugit explicabo dolorem quibusdam odit nesciunt molestiae!</p>
-      </div>
-      <div class="flex justify-end mx-10 mt-14">
-        <img src="../assets/71973ab15d799380dd1ea68c25c00ecd.png" alt="">
-      </div>
-    </div> -->
-
-
     </div>
 
-    <script src="../scripts/app.js"></script>
     <script src="../node_modules/preline/dist/preline.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     <script src="../node_modules/flowbite/dist/flowbite.min.js"></script>
