--- a/pages/reason.html
+++ b/pages/reason.html
@@ -80,12 +80,8 @@
         </div>
         <div class="bg-sky-200 m-6 z-0 rounded-lg">
             <p class="fashion-text p-5 z-0">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis dolorum aut tempora qui rem nihil
-                nostrum laborum quasi? Architecto corporis numquam aspernatur veritatis earum, impedit amet qui eveniet
-                porro iusto.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur sunt vero debitis
-                distinctio suscipit sed dolore impedit, corrupti fugiat obcaecati rerum nam, quae cum exercitationem
-                expedita, necessitatibus saepe a.
+                As a kid and a teen, I thoroughly enjoyed Alex Russo's character and overall development. Throughout the show, we see her mature and since I was also growing,
+                    it felt like I was maturing as well. Alex is a very relatable teen, who doesn't excel in many subjects, is very lazy, and envies her siblings. Her emotions are very realistic. Though she seems like a delinquient, she is a very kind-hearted and empathetic despite her apathetic front. I also loved her humor and sarcasticness. It feels as though her character somewhat shaped my own humor.
             </p>
         </div>
     </div>
@@ -123,18 +119,17 @@
                     <p class="text-center nav-text text-5xl inline-block">Why is Alex Russo
                         <span class="nav-text text-5xl inline-block bg-pink-400 p-2 -skew-y-2"> INFLUENTIAL?</span>
                     </p>
-                    <p class="fashion-text text-3xl bg-sky-200 p-5 mt-5 rounded-lg" style="padding-bottom: 40px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ipsam molestiae natus provident similique, modi sint nisi fugit aspernatur tenetur mollitia eligendi temporibus ratione placeat iusto? Porro, aliquam possimus. Voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro enim numquam mollitia beatae iusto vero, sit saepe. Rem, aspernatur repellendus? Reiciendis quia necessitatibus, tenetur error harum illum praesentium aliquid maxime.</p>
+                    <p class="fashion-text text-2xl bg-sky-200 p-5 mt-5 rounded-lg" style="padding-bottom: 40px;">
+                    As a kid and a teen, I thoroughly enjoyed Alex Russo's character and overall development. Throughout the show, we see her mature and since I was also growing,
+                    it felt like I was maturing as well. Alex is a very relatable teen, who doesn't excel in many subjects, is very lazy, and envies her siblings. Her emotions are very realistic. Though she seems like a delinquient, she is a very kind-hearted and empathetic despite her apathetic front. I also loved her humor and sarcasticness. It feels as though her character somewhat shaped my own humor.
+                    </p>
                 </div>
             </div>
         </div>
         
-        
-
-
 
     </div>
 
-    <script src="../scripts/app.js"></script>
     <script src="../node_modules/preline/dist/preline.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     <script src="../node_modules/flowbite/dist/flowbite.min.js"></script>
