--- a/pages/about.html
+++ b/pages/about.html
@@ -50,16 +50,16 @@
           </button>
         </div>
         <div class="text-center nav-text text-xl">
-          <a href="index.html">
+          <a href="../index.html">
             <div id="homeNav" class=" hover:text-violet-400" style="margin: 40px 0;">Home</div>
           </a>
-          <a href="./pages/about.html">
+          <a href="./about.html">
             <div id="aboutNav" class=" hover:text-violet-400" style="margin: 40px 0;">About</div>
           </a>
-          <a href="./pages/fashion.html">
+          <a href="./fashion.html">
             <div id="fashionNav" class=" hover:text-violet-400" style="margin: 40px 0;">Fashion</div>
           </a>
-          <a href="./pages/reason.html">
+          <a href="./reason.html">
             <div itemref="reasonNav" class=" hover:text-violet-400" style="margin: 40px 0;">Reason</div>
           </a>
         </div>
@@ -128,12 +128,12 @@
 
 
   <div id="accordion-collapse" data-accordion="collapse" class="mt-14 mb-14" style="padding: 0 40px;">
-    <h2 id="accordion-collapse-heading-1">
+    <h2 id="accordion-collapse-heading-1 fashion-text">
       <button type="button"
         class="flex items-center justify-between w-full p-3 font-medium rtl:text-right border border-b-0 border-gray-200 rounded-t-xl focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 gap-3 bg-pink-300"
         data-accordion-target="#accordion-collapse-body-1" aria-expanded="true"
         aria-controls="accordion-collapse-body-1">
-        <span>What is Flowbite?</span>
+        <span class="fashion-text text-2xl">Basic Information</span>
         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -142,12 +142,8 @@
       </button>
     </h2>
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
-      <div class="p-3 border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900 bg-pink-200">
-        <p class="mb-2 text-gray-500 dark:text-gray-400">Flowbite is an open-source library of interactive components
-          built on top of Tailwind CSS including buttons, dropdowns, modals, navbars, and more.</p>
-        <p class="text-gray-500 dark:text-gray-400">Check out this guide to learn how to <a
-            href="/docs/getting-started/introduction/" class="text-blue-600 dark:text-blue-500 hover:underline">get
-            started</a> and start developing websites even faster with components on top of Tailwind CSS.</p>
+      <div class="p-3 border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900 bg-pink-100">
+        <p class="mb-2 text-gray-500 dark:text-gray-400 fashion-text text-xl">Alexandra Margarita "Alex" Russo is the main protagonist of Wizards of Waverly Place. She is the only daughter of Jerry and Theresa Russo, the younger sister of Justin and the older sister of Max. In the finale season, she is the Family Wizard after winning the Family Wizard Competition. She is also in a long-term relationship with werewolf Mason Greybeck.</p>
       </div>
     </div>
     <h2 id="accordion-collapse-heading-2">
@@ -155,7 +151,7 @@
         class="flex items-center justify-between w-full p-3 font-medium rtl:text-right text-gray-500 border border-b-0 border-gray-200 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 gap-3  bg-pink-300"
         data-accordion-target="#accordion-collapse-body-2" aria-expanded="false"
         aria-controls="accordion-collapse-body-2">
-        <span>Is there a Figma file available?</span>
+        <span class="fashion-text text-2xl text-black">Powers And Abilities</span>
         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -165,11 +161,8 @@
     </h2>
     <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
       <div class="p-3 border border-b-0 border-gray-200 dark:border-gray-700 bg-pink-200">
-        <p class="mb-2 text-gray-500 dark:text-gray-400">Flowbite is first conceptualized and designed using the Figma
-          software so everything you see in the library has a design equivalent in our Figma file.</p>
-        <p class="text-gray-500 dark:text-gray-400">Check out the <a href="https://flowbite.com/figma/"
-            class="text-blue-600 dark:text-blue-500 hover:underline">Figma design system</a> based on the utility
-          classes from Tailwind CSS and components from Flowbite.</p>
+        <p class="mb-2 text-gray-500 dark:text-gray-400 fashion-text text-xl">At one point, Alex was the most powerful Wizard in the world! Spells and Magic-related Powers that Alex showcased throughout the show were: Cloning, Rewinding Time, Controlling Others, Truth Spell, Telekinesis, Levitation, Molecular Manipulation, Teleportation, Enchantment, etc.</p>
+        <p class="text-gray-500 dark:text-gray-400 fashion-text text-xl">Her other abilities that don't involve spells or anything supernatural includes Pickpocketing, Stealthiness, and basic Combat.</p>
       </div>
     </div>
     <h2 id="accordion-collapse-heading-3">
@@ -177,7 +170,7 @@
         class="flex items-center justify-between w-full p-3 font-medium rtl:text-right text-gray-500 border border-gray-200 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 gap-3  bg-pink-300"
         data-accordion-target="#accordion-collapse-body-3" aria-expanded="false"
         aria-controls="accordion-collapse-body-3">
-        <span>What are the differences between Flowbite and Tailwind UI?</span>
+        <span class="fashion-text text-2xl text-black">Personality</span>
         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -187,23 +180,16 @@
     </h2>
     <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
       <div class="p-3 border border-t-0 border-gray-200 dark:border-gray-700 bg-pink-200">
-        <p class="mb-2 text-gray-500 dark:text-gray-400">The main difference is that the core components from Flowbite
-          are open source under the MIT license, whereas Tailwind UI is a paid product. Another difference is that
-          Flowbite relies on smaller and standalone components, whereas Tailwind UI offers sections of pages.</p>
-
-        <ul class="ps-5 text-gray-500 list-disc dark:text-gray-400">
-          <li><a href="https://flowbite.com/pro/" class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite
-              Pro</a></li>
-          <li><a href="https://tailwindui.com/" rel="nofollow"
-              class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a></li>
-        </ul>
+        <p class="mb-2 text-gray-500 dark:text-gray-400 fashion-text text-xl">Alex is not overly studious nor is she an academically gifted student. Rather, she relies more on her street-smarts than academics. She also has a tedency to be very lazy. However, as she matured, she started to become more studious in both magic and mortal lessons, managing to beat Justin in the Family Wizard Competition. She's very manipulative, and known to be a mischievious troublemaker. One of her flaws is her own reliance on magic and her laziness, which often results in magical troubles, as well her lack of disregard for rules.
+          <br>
+          Despite her frequent unkindness and pranks, Alex is far from heartless. She deeply cares for Harper, going so far as to reveal her secret to her in "Harper Knows" out of guilt for lying, and loves her brothers dearly despite their constant rivalry, especially with Justin. Throughout the show, you can see Alex grow as she frequents the feeling of remorse and guilt and has apologized and taken responsibility for her actions.
+        </p>
       </div>
     </div>
   </div>
 
 
 
-  <script src="../scripts/app.js"></script>
   <script src="../node_modules/preline/dist/preline.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
   <script src="../node_modules/flowbite/dist/flowbite.min.js"></script>
